# Personal-Diet-Manager

./: .gitignore  README.md
backend/: __init__.py  alembic.ini  config.py  database.py  main.py  pyproject.toml  test_db.py  utils.py
backend/alembic/: env.py
backend/alembic/versions/: d366d94b0ebf_initial.py
backend/auth/: __init__.py  dependencies.py  jwt.py  router.py
backend/backend.egg-info/: PKG-INFO  requires.txt
backend/cruds/: __init__.py  crud.py  user.py
backend/databases/: database.py
backend/models/: __init__.py  diet.py  ingredient.py  meal.py  user.py
backend/routers/: __init__.py  user.py
backend/schemas/: __init__.py  auth.py  ingredient.py  schemas.py  user.py
backend/services/: cooking_book.py  diet_planner.py  import_data.py  ingredients.py  macro_calculator.py
docker/: docker-compose.yml
